--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@
 }
 
 img {
-  width: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+  width: 500px;
 }
 
 h1 {
